Получили объект более удобным методом